Improve system runtime management
